--- a/CSS/stilos.css
+++ b/CSS/stilos.css
@@ -149,6 +149,32 @@ footer ul li a {
     --bs-btn-disabled-border-color: #000;
 }
 
+/*PRODUCTOS*/
+.productos,
+.carrito {
+    padding: 1rem;
+}
+  
+#cont-productos {
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 16px;
+}
+  
+.producto {
+    border: 2px solid black;
+    border-radius: 10px;
+    width: 250px;
+    padding: 1rem;
+  
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+
 /*INICIO DE SESIÓN*/
 .inicio-de-sesion-container {
     display: flex;
