--- a/CSS/stilos.css
+++ b/CSS/stilos.css
@@ -14,6 +14,15 @@
 }
 
 
+/*FLEX*/
+.flex, .inicio-de-sesion-container, .carrito-container, .contacto-container, .datos-titulo, .main-productos, .main-index, footer ul,  
+.ver-index {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+
 /*HEADER*/
 .logo {
     width: 12%;
@@ -21,8 +30,7 @@
     margin-bottom: 0%;
     margin-left: 0px;
     margin-right: 0%;
-}
-  
+} 
 .opciones-navbar {
     width: 100%;
     margin-top: 10px;
@@ -30,11 +38,9 @@
     margin-left: 20px;
     margin-right: 0%;
 }
-  
 .navbar-buscar {
     margin-top: 10px;
 }
-  
 .buscar {
     --bs-btn-color: #000000;
     --bs-btn-border-color: #000;
@@ -57,9 +63,6 @@ footer {
 }
 footer ul {
     list-style-type: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
 }
 footer ul li a {
     text-decoration: none;
@@ -67,13 +70,7 @@ footer ul li a {
 }
 
 
-/*CARRUSEL*/
-.flex, .inicio-de-sesion-container, .carrito-container, .contacto-container, .datos-titulo, .main-productos, .main-index, footer ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-  
+/*CARRUSEL*/ 
 .carrusel-container {
     width: 50%;
     margin-top: 50px;
@@ -82,27 +79,28 @@ footer ul li a {
     margin-right: 0%;
 }
   
+
 /*INDEX*/
 .texto-index {
     margin-top: 5%;
     text-align: center;
 }
-  
 .ver-index {
     margin-top: 5%;
     margin-bottom: -3%;
     width: 100%;
     margin-top: 5%;
     margin-bottom: -3%;
-    margin-left: 7%;
+    margin-left: 0%;
     margin-right: 0%;
 }
-  
 .ver {
-    padding: 60px;
+    padding: 40px;
     margin: 5px;
+    width: 65%;
 }
-  
+ 
+
 /*GALERIA*/
 .galeria {
     display: grid;
@@ -115,25 +113,21 @@ footer ul li a {
     margin-left: 20px;
     margin-right: 20px;
 }
-  
 .img-galeria {
     width: 90%;
     margin-bottom: 20px;
     border-radius: 4%;
     transition: all 0.5s ease-in-out;
-}
-  
+}  
 .img-galeria:hover {
     width: 100%;
 }
-  
 .galeria-titulo {
     grid-column: 1/6;
     justify-self: center;
-    margin-top: 12%;
+    margin-top: 10%;
     margin-bottom: 0%;
 }
-
 .btn-primary {
     --bs-btn-color: #ffffff;
     --bs-btn-bg: #000;
@@ -149,40 +143,67 @@ footer ul li a {
     --bs-btn-disabled-border-color: #000;
 }
 
-/*PRODUCTOS*/
-.productos,
-.carrito {
-    padding: 1rem;
-}
-  
+
+/*PRODUCTOS*/ 
 #cont-productos {
-    padding: 1rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 16px;
+    display: grid;
+    grid-template-rows: 50px repeat(1, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    align-items: end;
+    gap: 8%;
+    margin-top: -2%;
+    padding-bottom: 30%;
+    margin-left: 4%;
+    margin-right: 4%;
 }
-  
+.titulo-productos {
+    grid-column: 1/4;
+    justify-self: center;
+    margin-bottom: -6%;
+}
 .producto {
-    border: 2px solid black;
+    border: 1px solid rgb(90, 86, 86);
     border-radius: 10px;
-    width: 250px;
-    padding: 1rem;
-  
-    display: flex;
+    width: 300px;
+    padding: 10%;
+}
+.btn {
+    --bs-btn-color: #ffffff;
+    --bs-btn-bg: #000;
+    --bs-btn-border-color: #000;
+    --bs-btn-hover-color: #000;
+    --bs-btn-hover-bg: #fff;
+    --bs-btn-hover-border-color: #000;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-bg: #000;
+    --bs-btn-active-border-color: #000;
+    --bs-btn-disabled-color: #000;
+    --bs-btn-disabled-bg: #000;
+    --bs-btn-disabled-border-color: #000;
+}
+
+
+/*CARRITO*/
+.carrito-container {
+    align-items: center;
     flex-direction: column;
-    gap: 16px;
+    margin-top: 12%;
+}
+.carrito-img {
+    width: 50%;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    margin-left: 20%;
+    margin-right: 0;
+}
+.carrito-texto {
+    text-align: center;
 }
 
 
 /*INICIO DE SESIÓN*/
-.inicio-de-sesion-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-  
-.inicio-de-sesion {
+ .inicio-de-sesion {
     width: 50%;
     margin-top: 80px;
     margin-bottom: 0%;
@@ -224,10 +245,28 @@ footer ul li a {
       margin-top: 10px;
     }
     .galeria-titulo {
-      margin-top: 4%;
-      margin-bottom: 8%;
+      margin-top: 0%;
+      margin-bottom: 0%;
       grid-column: 1/3;
       justify-self: center;
+    }
+    .cont-productos {
+        width: 100%;
+        margin: 0%;
+    }
+    #cont-productos {
+        display: grid;
+        grid-template-rows: auto;
+        grid-template-columns: repeat(1, 1fr);
+        justify-items: center;
+        gap: 30px;
+        padding-top: 10%;
+    }
+    .titulo-productos {
+        grid-column: 1/2;
+        justify-self: center;
+        margin-top: 4%;
+        margin-bottom: 2%;
     }
     .carrito-container {
       margin-top: 35%;
